# social_package_manager

./: .gitignore  Dockerfile  README.md  demo.sh  docker-compose.yml  example.py  pyproject.toml  setup.cfg
spm/: __main__.py  spm.py
