[tool.poetry]
name = "ecs251_final_project"
version = "0.1.0"
description = ""
authors = ["Claudio Spiess <claudiosv@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Cython = "^0.29.28"
pytermgui = "^4.0.1"
rich = "^12.0.0"
setuptools = "^60.9.3"
build = "^0.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#[build-system]
#requires = ["setuptools"]
#build-backend = "setuptools.build_meta"